[gd_scene load_steps=22 format=3 uid="uid://bm7qixheu1ido"]

[ext_resource type="Theme" uid="uid://dfg03umfptpp8" path="res://default.tres" id="1_hc207"]
[ext_resource type="Script" path="res://start_screen/start_screen_v_2.gd" id="2_lsvyq"]
[ext_resource type="Shader" path="res://start_screen/earfbound.gdshader" id="3_0ypqx"]
[ext_resource type="Shader" path="res://shaders/rainbow.gdshader" id="3_qvwk6"]
[ext_resource type="Texture2D" uid="uid://cjlgntjpfw7b" path="res://assets/images/trippy_bit_titlescreen_stars.png" id="4_poyol"]
[ext_resource type="Texture2D" uid="uid://bt3cerxm6btvc" path="res://assets/images/trippy_bit_title_v1.png" id="4_yiatr"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="5_1ujn5"]
[ext_resource type="Texture2D" uid="uid://b0knckrdbnktu" path="res://assets/8bitbutton-single.png" id="5_qsy6j"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="6_moa7p"]
[ext_resource type="Script" path="res://start_screen/press_start_label.gd" id="7_u2n5r"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="7_ywf01"]

[sub_resource type="Resource" id="Resource_mjuor"]
script = ExtResource("6_moa7p")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_norti"]
script = ExtResource("6_moa7p")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Gradient" id="Gradient_kq2ns"]
colors = PackedColorArray(0.0627451, 0.0392157, 0.0941176, 1, 0.0627451, 0.0392157, 0.0941176, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_q4dq5"]
gradient = SubResource("Gradient_kq2ns")

[sub_resource type="Gradient" id="Gradient_n2p0x"]
interpolation_mode = 2
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.495798, 0.84874)
colors = PackedColorArray(0.0627451, 0.0392157, 0.0941176, 1, 0.572549, 0.294118, 0.937255, 1, 0.662745, 0.505882, 0.87451, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a265f"]
gradient = SubResource("Gradient_n2p0x")
repeat = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ybmtd"]
shader = ExtResource("3_0ypqx")
shader_parameter/snes_transparency = true
shader_parameter/gba_transparency = false
shader_parameter/horizontal_scan_line = false
shader_parameter/vertical_scan_line = false
shader_parameter/enable_palette_cycling = true
shader_parameter/sprite_scroll_direction = Vector2(0, 0)
shader_parameter/sprite_scroll_speed = 0.01
shader_parameter/gba_transparency_scroll_direction = Vector2(1, 2)
shader_parameter/gba_transparency_scroll_speed = 0.01
shader_parameter/gba_transparency_value = 0.5
shader_parameter/horizontal_wave_amplitude = 0.0
shader_parameter/horizontal_wave_frequency = 1.0
shader_parameter/horizontal_wave_speed = 0.25
shader_parameter/vertical_wave_amplitude = 1.0
shader_parameter/vertical_wave_frequency = 1.0
shader_parameter/vertical_wave_speed = 0.25
shader_parameter/horizontal_deform_amplitude = 1.0
shader_parameter/horizontal_deform_frequency = 1.0
shader_parameter/horizontal_deform_speed = 0.25
shader_parameter/vertical_deform_amplitude = 0.0
shader_parameter/vertical_deform_frequency = 0.0
shader_parameter/vertical_deform_speed = 0.25
shader_parameter/width = 0.0
shader_parameter/height = 0.0
shader_parameter/palette_cycling_speed = 0.1
shader_parameter/palette = SubResource("GradientTexture2D_a265f")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mtjye"]
shader = ExtResource("3_0ypqx")
shader_parameter/snes_transparency = true
shader_parameter/gba_transparency = false
shader_parameter/horizontal_scan_line = false
shader_parameter/vertical_scan_line = false
shader_parameter/enable_palette_cycling = false
shader_parameter/sprite_scroll_direction = Vector2(0, 0)
shader_parameter/sprite_scroll_speed = 1.0
shader_parameter/gba_transparency_scroll_direction = Vector2(0, 0)
shader_parameter/gba_transparency_scroll_speed = 0.01
shader_parameter/gba_transparency_value = 0.5
shader_parameter/horizontal_wave_amplitude = 1.0
shader_parameter/horizontal_wave_frequency = 1.0
shader_parameter/horizontal_wave_speed = 1.0
shader_parameter/vertical_wave_amplitude = 0.0
shader_parameter/vertical_wave_frequency = 0.0
shader_parameter/vertical_wave_speed = 1.0
shader_parameter/horizontal_deform_amplitude = 1.0
shader_parameter/horizontal_deform_frequency = 0.5
shader_parameter/horizontal_deform_speed = 1.0
shader_parameter/vertical_deform_amplitude = 1.0
shader_parameter/vertical_deform_frequency = 0.5
shader_parameter/vertical_deform_speed = 1.0
shader_parameter/width = 0.0
shader_parameter/height = 0.0
shader_parameter/palette_cycling_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2rb8j"]
shader = ExtResource("3_qvwk6")
shader_parameter/strength = 0.3
shader_parameter/speed = 0.5
shader_parameter/angle = 90.0

[sub_resource type="LabelSettings" id="LabelSettings_hpxsq"]
font_color = Color(0.611765, 0.811765, 0.384314, 1)

[node name="StartScreen" type="Node2D"]
script = ExtResource("2_lsvyq")

[node name="PhantomMenuCam" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(320, 180)
script = ExtResource("5_1ujn5")
priority = 20
snap_to_pixel = true
tween_resource = SubResource("Resource_mjuor")
draw_limits = true

[node name="PhantomOptionsCam" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(960, 180)
script = ExtResource("5_1ujn5")
snap_to_pixel = true
tween_resource = SubResource("Resource_norti")
draw_limits = true

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(320, 180)

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
script = ExtResource("7_ywf01")

[node name="Parallax2DBackground" type="Parallax2D" parent="."]
repeat_size = Vector2(620, 360)
repeat_times = 5

[node name="Sprite2D" type="TextureRect" parent="Parallax2DBackground"]
offset_right = 640.0
offset_bottom = 360.0
texture = SubResource("GradientTexture2D_q4dq5")

[node name="Parallax2DStars" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 360)
repeat_times = 5

[node name="TextureRect" type="TextureRect" parent="Parallax2DStars"]
material = SubResource("ShaderMaterial_ybmtd")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_poyol")
stretch_mode = 1

[node name="Parallax2DMoon" type="Parallax2D" parent="."]
visible = false
scroll_scale = Vector2(1.5, 1.5)
repeat_size = Vector2(640, 360)
repeat_times = 5

[node name="Sprite2D" type="TextureRect" parent="Parallax2DMoon"]
texture_repeat = 3
material = SubResource("ShaderMaterial_mtjye")
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("5_qsy6j")
expand_mode = 1
stretch_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_hc207")
metadata/_edit_vertical_guides_ = [320.0]
metadata/_edit_use_anchors_ = true

[node name="Menu" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Control/Menu"]
material = SubResource("ShaderMaterial_2rb8j")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 28.0
offset_right = 117.0
offset_bottom = 220.0
grow_horizontal = 2
texture = ExtResource("4_yiatr")
expand_mode = 1
stretch_mode = 5

[node name="PressStartLabel" type="Label" parent="Control/Menu"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -147.0
offset_right = 88.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
text = "Press Start"
label_settings = SubResource("LabelSettings_hpxsq")
script = ExtResource("7_u2n5r")

[node name="MenuOptions" type="VBoxContainer" parent="Control/Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 22.0
offset_right = 63.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="Control/Menu/MenuOptions"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="Control/Menu/MenuOptions"]
layout_mode = 2
theme = ExtResource("1_hc207")
theme_type_variation = &"MainMenuButton"
text = "NEW GAME"

[node name="ContinueButton" type="Button" parent="Control/Menu/MenuOptions"]
layout_mode = 2
theme = ExtResource("1_hc207")
theme_type_variation = &"MainMenuButton"
text = "CONTINUE"

[node name="OptionsButton" type="Button" parent="Control/Menu/MenuOptions"]
layout_mode = 2
theme = ExtResource("1_hc207")
theme_type_variation = &"MainMenuButton"
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="Control/Menu/MenuOptions"]
layout_mode = 2
theme = ExtResource("1_hc207")
theme_type_variation = &"MainMenuButton"
text = "EXIT"

[node name="LoadTest" type="Button" parent="Control/Menu/MenuOptions"]
layout_mode = 2
theme = ExtResource("1_hc207")
theme_type_variation = &"MainMenuButton"
text = "Load Test"

[node name="OptionsMenu" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/OptionsMenu/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Display"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "640 x 360"
popup/item_1/text = "1280 x 720"
popup/item_1/id = 2
popup/item_2/text = "1920 x 1080"
popup/item_2/id = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Borderless"

[node name="CheckBox" type="CheckBox" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label2" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master"

[node name="HSlider" type="HSlider" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX"

[node name="HSlider" type="HSlider" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"

[node name="HSlider" type="HSlider" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Label3" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Gameplay"
horizontal_alignment = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/OptionsMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "Difficulty"

[node name="OptionButton" type="OptionButton" parent="Control/OptionsMenu/PanelContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
selected = 1
item_count = 3
popup/item_0/text = "Easy"
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/OptionsMenu"]
layout_mode = 0
offset_left = 223.0
offset_top = 290.0
offset_right = 417.0
offset_bottom = 309.0
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="Control/OptionsMenu/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="ApplyButton" type="Button" parent="Control/OptionsMenu/HBoxContainer"]
layout_mode = 2
text = "Apply"

[node name="AcceptButton" type="Button" parent="Control/OptionsMenu/HBoxContainer"]
layout_mode = 2
text = "Accept"

[connection signal="gui_input" from="Control/Menu/PressStartLabel" to="." method="_on_press_start_label_gui_input"]
[connection signal="pressed" from="Control/Menu/MenuOptions/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/Menu/MenuOptions/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/Menu/MenuOptions/LoadTest" to="." method="_on_load_test_pressed"]
[connection signal="pressed" from="Control/OptionsMenu/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
